# VibeLightTrader

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/: FUNDING.yml
alembic/: env.py
alembic/versions/: 8c3404c1fe45_add_sentiment_snapshots.py  c8a63d8c4c9c_add_signal_suggest_status_columns.py  e139634d6d63_initial_schema.py
config/: settings.example.yaml  settings.yaml  watchlist.example.yaml
docs/: lark_app_description.md  mid-term-investing.md
docs/superpowers/plans/: 2026-05-02-equity-monitor.md  (+1 more)
docs/vibe-coding/: A-kickoff.md  B-meta-skills.md  C-evolution-timeline.md  D-decision-points.md  E-ai-cant-do-this.md  F-skeleton.md  README.md  appendix-conversations.md
scripts/: api_probe.py  check_opend.py  dry_run_runner.py  gen_demo_chart.py  install_opend.sh  preview_lark_cards.py  refresh_fundamentals_fixtures.py  smoke_e2e.py  smoke_phase3.py
src/equity_monitor/: analyze.py  config.py  db.py  futu_client.py  models.py
src/equity_monitor/cli/: main.py
src/vibe_trader/: analyze.py  config.py  db.py  futu_client.py  models.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: known_ohlc.csv
tests/integration/: test_brief_jobs.py  test_intraday_alert_with_snapshot.py  test_intraday_auto_trade.py  test_intraday_job.py  test_listener_chart.py  test_news_pulse.py
tests/unit/: test_backfill.py  test_batch_state.py  test_brief_kind.py  test_calendar.py  test_card_render.py  test_cli.py  test_cli_decide.py  test_cli_trade.py  test_compose.py  test_config.py  test_data_capital_anomaly.py  test_data_fundamentals.py  test_data_kline.py  test_data_news.py  test_data_quotes.py  test_data_sentiment.py  test_data_tech_anomaly.py  test_db.py  test_decisions_packet.py  test_decisions_store.py  test_event_apply.py  test_event_enrich.py  test_event_grammar.py  test_event_grammar_chart.py  test_event_listener.py  test_event_listener_ws_spawn.py  test_fundamentals_integration.py  test_fundamentals_refresh.py  test_futu_client_fake.py  test_indicators.py  test_interpret.py  test_jobs_strategy_dispatch.py  test_journal_errors.py  test_journal_metrics.py  test_journal_writer.py  test_lark_auth.py  test_lark_client.py  test_llm_clients.py  test_llm_cursor_agent.py  test_llm_prompt.py  (+16 more)
(+107 files in other folders)
