[project]
name = "vibe-trader"
version = "0.1.0"
description = "Vibe-coded mid-term equity trader: Futu OpenAPI quotes + cursor-agent (LLM) decisions + paper trading + Lark notifications"
requires-python = ">=3.11"
authors = [{ name = "you" }]
dependencies = [
  "futu-api>=9.2.5008",
  "apscheduler>=3.10.4",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "pandas>=2.2.0",
  "pandas-market-calendars>=4.4.0",
  "tenacity>=8.2.3",
  "jinja2>=3.1.4",
  "click>=8.1.7",
  "structlog>=24.1.0",
  "httpx>=0.27.0",
  "mplfinance>=0.12.10b0",
]

[project.scripts]
vibe-trader = "vibe_trader.cli.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "freezegun>=1.5.0",
  "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vibe_trader.reports" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end with FakeFutuClient + in-memory SQLite",
]
